--- a/kadry/src/main/webapp/wskazniki/sub/zusniemcy.xhtml
+++ b/kadry/src/main/webapp/wskazniki/sub/zusniemcy.xhtml
@@ -39,7 +39,7 @@
                          <p:column width="80" headerText="brutto" style="color: green;">
                              <bcf:outputwal value="#{items.oddelegowaniewaluta}" symbolwaluty="EUR"/>
                         </p:column>
-                      <p:column width="80" headerText="brutto" style="color: green;">
+                      <p:column width="80" headerText="podatek" style="color: green;">
                           <bcf:outputwal value="#{items.podatekdochodowyzagranicawaluta}" symbolwaluty="EUR"/>
                         </p:column>
                         <p:column width="30" headerText="proc" style="text-align: center;">
