przebudowa faktury okresowe dodano podatnika, sprawdza maile podatnik kontrahent

--- a/npkpir_23/web/manager/sub/tablica.xhtml
+++ b/npkpir_23/web/manager/sub/tablica.xhtml
@@ -333,6 +333,7 @@
 <!--        <p:commandButton value="skopiuj udzialy" actionListener="#{podatnikView.zamienudzialy()}"/>-->
 <!--        <p:commandButton value="zamien opodatkowanie" actionListener="#{podatnikView.zamienOpodatkowanieDochodowym()}"/>-->
 <!--        <p:commandButton value="naprawfaktury" actionListener="#{fakturaView.zrobfakt()}"/>-->
+     <p:commandButton value="okresowe podid" actionListener="#{fakturaView.okresowepodid()}"/>-->
 <!--    <h:form>
     <p:commandButton value="Export as PDF" ajax="false" >
 <p:dataExporter type="pdf" target="klienci" fileName="adresy"/>
