--- a/npkpir_23/web/wspolny/sub/faktura/faktura_stworz_niemiecka.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_stworz_niemiecka.xhtml
@@ -39,6 +39,7 @@
                                              onblur="$(this).removeClass('ui-state-focus');
                                                      $(this).addClass('ui-state-default');" >
                                 <f:selectItem itemLabel="Stück" itemValue="Stück"/>
+                                <f:selectItem itemLabel="Pauschal" itemValue="Pausch."/>
                                 <f:selectItem itemLabel="Std" itemValue="Std"/>
                                 <f:selectItem itemLabel="Kg" itemValue="Kg"/>
                                 <f:selectItem itemLabel="Km" itemValue="Km"/>
@@ -66,6 +67,7 @@
                                              onblur="$(this).removeClass('ui-state-focus');
                                                      $(this).addClass('ui-state-default');" >
                                 <f:selectItem itemLabel="19%" itemValue="19"/>
+                                <f:selectItem itemLabel="§13b" itemValue="20"/>
                                 <f:selectItem itemLabel="np" itemValue="-1"/>
                             </h:selectOneMenu>
                         </p:column>
@@ -131,6 +133,7 @@
                                              onblur="$(this).removeClass('ui-state-focus');
                                                      $(this).addClass('ui-state-default');" >
                                 <f:selectItem itemLabel="19%" itemValue="19"/>
+                                <f:selectItem itemLabel="§13b" itemValue="20"/>
                                 <f:selectItem itemLabel="np" itemValue="-1"/>
                             </h:selectOneMenu>
                         </p:column>
