--- a/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe.xhtml
@@ -78,7 +78,7 @@
             </p:panelGrid>
             
             <p:dataTable id="dokumentyOkresowe" value="#{fakturaView.fakturyokresowe}" var="wpis"  rowIndexVar="row"  filteredValue="#{fakturaView.fakturyokresoweFiltered}" 
-                         selection="#{fakturaView.gosciwybralokres}" rowKey="#{wpis.hashCode()}" style="max-width: 1550px;" widgetVar="okresTable" 
+                         selection="#{fakturaView.gosciwybralokres}" rowKey="#{wpis.id}" style="max-width: 1550px;" widgetVar="okresTable" 
                          sortBy="#{wpis.dokument.kontrahent.nazwabezCudzy}" sortOrder="ascending"
                          rowSelectMode="add">
                 
