--- a/kadry/src/main/webapp/pracownikalerty/sub/pracownik_alerty.xhtml
+++ b/kadry/src/main/webapp/pracownikalerty/sub/pracownik_alerty.xhtml
@@ -72,7 +72,7 @@
             <h:outputText value="Wprowadzamy daty ukończenia ostatniego szkolenia" style="color: blue;margin-top: 40px;"/>
             <p:dataTable id="datalist1" value="#{pracownikAlertyView.listaszkoleniabhp}" var="itemBHP" rowIndexVar="yndex1"
                          selectionMode="single" 
-                         rowKey="#{itemBHP.id}"   sortBy="#{itemBHP.nazwiskoImie}"
+                         rowKey="#{itemBHP.id}"   sortBy="#{itemBHP.nazwiskoiImie}"
                          style="height: 650px; overflow-y: scroll;width: 900px; margin-top: 10px"
                          emptyMessage="Nie pobrano listy"
                          >
@@ -85,48 +85,41 @@
                     </f:facet>
                     <h:outputText value="#{yndex1+1}"/>
                 </p:column>
-                <p:column width="200"  sortBy="#{itemBHP.nazwiskoImie}" sortOrder="asc" sortPriority="1">
+                <p:column width="200"  sortBy="#{itemBHP.nazwiskoiImie}" sortOrder="asc" sortPriority="1">
                     <f:facet name="header">
                         <h:outputText value="nazwisko i imię"/>
                     </f:facet>
-                    <h:outputText value="#{itemBHP.nazwiskoImie}"/>
+                    <h:outputText value="#{itemBHP.nazwiskoiImie}"/>
                 </p:column>
-                <p:column width="100" >
-                    <f:facet name="header">
-                        <h:outputText value="rodzaj umowy"/>
-                    </f:facet>
-                    <h:outputText value="umowa o pracę" rendered="#{itemBHP.umowakodzus.praca}"/>
-                    <h:outputText value="umowa zlecenia" rendered="#{itemBHP.umowakodzus.zlecenie}"/>
-                </p:column>
-                <p:column width="60" style="text-align: center;" sortBy="#{itemBHP.angaz.dataszkolenierok}" sortOrder="desc">
+                <p:column width="60" style="text-align: center;" sortBy="#{itemBHP.dataszkolenierok}" sortOrder="desc">
                     <f:facet name="header">
                         <h:outputText value="szkolenie coroczne"/>
                     </f:facet>
-                    <p:inputText value="#{itemBHP.angaz.dataszkolenierok}" title="datac od"  placeholder="____-__-__" maxlength="10"/>
+                    <p:inputText value="#{itemBHP.dataszkolenierok}" title="datac od"  placeholder="____-__-__" maxlength="10"/>
                 </p:column>
-                <p:column width="60" style="text-align: center;" sortBy="#{itemBHP.angaz.dataszkolenie3lata}" sortOrder="desc">
+                <p:column width="60" style="text-align: center;" sortBy="#{itemBHP.dataszkolenie3lata}" sortOrder="desc">
                     <f:facet name="header">
                         <h:outputText value="szkolenie co 3 lata"/>
                     </f:facet>
-                    <p:inputText value="#{itemBHP.angaz.dataszkolenie3lata}" title="datac od"  placeholder="____-__-__" maxlength="10"/>
+                    <p:inputText value="#{itemBHP.dataszkolenie3lata}" title="datac od"  placeholder="____-__-__" maxlength="10"/>
                 </p:column>
-                <p:column width="60" style="text-align: center;" sortBy="#{itemBHP.angaz.dataszkolenie5lat}" sortOrder="desc">
+                <p:column width="60" style="text-align: center;" sortBy="#{itemBHP.dataszkolenie5lat}" sortOrder="desc">
                     <f:facet name="header">
                         <h:outputText value="szkolenie co 5 lat"/>
                     </f:facet>
-                    <p:inputText value="#{itemBHP.angaz.dataszkolenie5lat}" title="datac od"  placeholder="____-__-__" maxlength="10"/>
+                    <p:inputText value="#{itemBHP.dataszkolenie5lat}" title="datac od"  placeholder="____-__-__" maxlength="10"/>
                 </p:column>
                 <p:column width="60" style="text-align: center;">
                     <f:facet name="header">
                         <h:outputText value="data przypomnienia"/>
                     </f:facet>
-                    <h:outputText value="#{itemBHP.angaz.dataprzypomnieniaszkolenie}"/>
+                    <h:outputText value="#{itemBHP.dataprzypomnieniaszkolenie}"/>
                 </p:column>
                 <p:column width="60" style="text-align: center;">
                     <f:facet name="header">
                         <h:outputText value="data mail"/>
                     </f:facet>
-                    <h:outputText value="#{itemBHP.angaz.dataprzypomnieniamailszkolenie}"/>
+                    <h:outputText value="#{itemBHP.dataprzypomnieniamailszkolenie}"/>
                 </p:column>
             </p:dataTable>
                 <p:commandButton value="zapisz" styleClass="buttonnorm" actionListener="#{pracownikAlertyView.zapiszzmianybhp()}" />
@@ -169,9 +162,9 @@
          <p:tab title="badania lekarskie"> 
             <h:form id="formbadania">
             <h:outputText value="Wprowadzamy daty ważności badań lekarskich" style="color: blue;margin-top: 40px;"/>
-            <p:dataTable id="datalist2" value="#{pracownikAlertyView.listaA1}" var="itembadania" rowIndexVar="yndexba"
+            <p:dataTable id="datalist2" value="#{pracownikAlertyView.listabadanialekarskie}" var="itembadania" rowIndexVar="yndexba"
                          selectionMode="single" 
-                         rowKey="#{itembadania.id}"   sortBy="#{itembadania.nazwiskoiImie}"
+                         rowKey="#{itembadania.id}"   sortBy="#{itembadania.nazwiskoImie}"
                          style="height: 650px; overflow-y: scroll;width: 500px; margin-top: 10px"
                          emptyMessage="Nie pobrano listy"
                          >
@@ -184,11 +177,11 @@
                     </f:facet>
                     <h:outputText value="#{yndexba+1}"/>
                 </p:column>
-                <p:column width="150"  sortBy="#{itembadania.nazwiskoiImie}" sortOrder="asc" sortPriority="1">
+                <p:column width="150"  sortBy="#{itembadania.nazwiskoImie}" sortOrder="asc" sortPriority="1">
                     <f:facet name="header">
                         <h:outputText value="nazwisko i imię"/>
                     </f:facet>
-                    <h:outputText value="#{itembadania.nazwiskoiImie}"/>
+                    <h:outputText value="#{itembadania.nazwiskoImie}"/>
                 </p:column>
                 <p:column width="60" style="text-align: center;" sortBy="#{itembadania.databadanielekarskie}" sortOrder="desc">
                     <f:facet name="header">
