--- a/npkpir_23/web/ksiegowa/sub/dokumentyzaksiegowane.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/dokumentyzaksiegowane.xhtml
@@ -96,7 +96,7 @@
          <p:commandButton id="cechadokumentu" value="CechyDok(V)" styleClass="fkbutton" style="width: 150px; margin-left: 10px; " 
                                         onclick="PF('dialogCechyDokumentuZbiorcze').show();" accesskey="v" 
                                      global="false"/>
-         <p:panelGrid id="sumawybranychpanel" style="width: 810px; text-align: center;">
+         <p:panelGrid   columns="1" id="sumawybranychpanel" style="width: 810px; text-align: center;">
               <f:facet name="header">
                   <p:row>
                       <p:column>
