--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_wpis_srodkitrwale.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_wpis_srodkitrwale.xhtml
@@ -137,7 +137,7 @@
                     </p:column>
                 </p:dataTable>
             </p:panel>
-            <p:panelGrid style="padding: 5px; margin-left: 5px;">
+            <p:panelGrid  columns="1"  style="padding: 5px; margin-left: 5px;">
                 <f:facet name="header">
                     <p:row>
                         <p:column>
