--- a/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone.xhtml
@@ -26,7 +26,7 @@
         </style>
         <h:form id="formsporzadzone">
            
-            <p:panelGrid id="panelsum" style="height: 40px;" rendered="#{WpisView.biuroiszef eq true}">
+            <p:panelGrid   columns="1" id="panelsum" style="height: 40px;" rendered="#{WpisView.biuroiszef eq true}">
                 <f:facet name="header">
                     <p:row>
                         <p:column>
@@ -58,7 +58,7 @@
                     </p:column>
                 </p:row>
             </p:panelGrid>
-            <p:panelGrid rendered="#{sMTPSettingsView.selected eq nukl}">
+            <p:panelGrid  columns="1"  rendered="#{sMTPSettingsView.selected eq nukl}">
                 <h:outputText value="Nie skonfigurowano maila firmy. Faktury będą wysyłane z domyślnego maila programu: info@taxman.biz.pl" style="font-weight: 800; color: red;"/>
             </p:panelGrid>
             <p:panel header="dołącz krótką wiadomość do wysyłanego maila" id="panelwiadomosc" >
