--- a/npkpir_23/web/ksiegowa/sub/podatnikust/cechydokumentow.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/podatnikust/cechydokumentow.xhtml
@@ -52,7 +52,7 @@
             </p:dataTable>
             </h:form>
         <h:form id="formCH1">
-            <p:panelGrid id="nowacecha" >
+            <p:panelGrid id="nowacecha"   columns="1" >
                 <f:facet name="header">
                     <p:row>
                         <p:column>
