--- a/npkpir_23/web/ksiegowa/sub/wykazklientow_dialog.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/wykazklientow_dialog.xhtml
@@ -12,7 +12,7 @@
             <p:panel  style="width: 1100px; height: 180px" >
                 <p:growl life="3600"  id="mess_add" ><p:autoUpdate/></p:growl>
                 <p:focus id="focus" for="polawprowadzania"  />
-                <p:panelGrid id="polawprowadzania" >
+                <p:panelGrid   columns="1"  id="polawprowadzania" >
                     <f:facet name="header">
                         <p:row >
                             <p:column>
