--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_waluty.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_waluty.xhtml
@@ -69,7 +69,7 @@
             </p:dataTable>
         </h:form>
         <h:form id="wpiswalut">
-            <p:panelGrid id="dataTablewpisywaniewalut" style="margin-top: 10px;margin-bottom: 5px; display: none; width: 150px;">
+            <p:panelGrid   columns="1" id="dataTablewpisywaniewalut" style="margin-top: 10px;margin-bottom: 5px; display: none; width: 150px;">
                 <f:facet name="header">
                     <p:row>
                         <p:column width="40">
