--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_wpisywanie.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_wpisywanie.xhtml
@@ -120,7 +120,7 @@
                 <!--                nagłówek dokumentu-->
                 <p:panelGrid id="panelzkwotami" columns="2" >
                     <p:panelGrid  columns="1"  >
-                        <p:panelGrid id="paneldatydokumentu">
+                        <p:panelGrid  columns="1"  id="paneldatydokumentu">
                             <f:facet name="header">
                                 <p:row>
                                     <p:column>
@@ -242,7 +242,7 @@
                                 </p:column>
                             </p:row>
                         </p:panelGrid>
-                        <p:panelGrid id="paneldaneogolnefaktury">
+                        <p:panelGrid  columns="1"  id="paneldaneogolnefaktury">
                             <f:facet name="header">
                                 <p:row>
                                     <p:column>
@@ -296,7 +296,7 @@
                                 </p:column>
                             </p:row>
                         </p:panelGrid>
-                        <p:panelGrid id="panelzkwotamidok">
+                        <p:panelGrid  columns="1"  id="panelzkwotamidok">
                             <f:facet name="header">
                                 <p:row>
                                     <p:column>
@@ -365,7 +365,7 @@
                             <h:outputText value="#{planKontView.infozebrakslownikowych}" style="color: red; font-weight: 900;"/>
                         </p:panelGrid>-->
                         <p:panelGrid columns="2" id="panelwalutowy" style="min-width: 100%;"  styleClass="uipanelGrid0" >
-                            <p:panelGrid id="panelwalutowywybor" style="min-width: 20%;">
+                            <p:panelGrid  columns="1"  id="panelwalutowywybor" style="min-width: 20%;">
                                 <f:facet name="header">
                                     <p:row>
                                         <p:column>
@@ -403,7 +403,7 @@
                                     </p:column>
                                 </p:row>
                             </p:panelGrid>
-                            <p:panelGrid id="panelTabelaNBP" style="min-width: 80%;">
+                            <p:panelGrid   columns="1" id="panelTabelaNBP" style="min-width: 80%;">
                                 <f:facet name="header">
                                     <p:row rendered="#{dokfkView.pokazRzadWalutowy || (dokfkView.selected.tabelanbp.waluta.symbolwaluty ne 'PLN' and dokfkView.selected.rodzajedok.kategoriadokumentu != 0)}">
                                         <p:column>
@@ -703,7 +703,7 @@
                     <p:outputPanel id="komunikatywpisdok" style="text-align: left; margin-left: 10px;">
                         <h:outputText  value="#{dokfkView.komunikatywpisdok}" style="color: red;"/>
                     </p:outputPanel> 
-                    <p:panelGrid id="panelwpisbutton" style="text-align: right; float: right;">
+                    <p:panelGrid   columns="1" id="panelwpisbutton" style="text-align: right; float: right;">
                         <p:row>
                         <p:column style="text-align: right;" width="100" rendered="#{dokfkView.selected.rodzajedok.skrotNazwyDok eq 'BO' or dokfkView.selected.rodzajedok.skrotNazwyDok eq 'BOR'}">
                             <h:outputText value="SaldoWn: "/>
