--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_zestawieniezaksiegowanych.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_zestawieniezaksiegowanych.xhtml
@@ -54,7 +54,7 @@
                 <h:outputText value="   suma wartości netto wybranych dokumentów: "/>
                 <bcf:outputpl id="podsumowaniewybr" value="#{dokfkView.podsumowaniewybranych}"/>
             </p:panelGrid>
-            <p:panelGrid id="panelprzyciskowzestdok" style="margin-left: 2%;" >
+            <p:panelGrid  columns="1"  id="panelprzyciskowzestdok" style="margin-left: 2%;" >
                 <p:row>
                     <p:column>
                         <h:outputText value="miesiąc: "/>
