--- a/npkpir_23/web/manager/sub/zamykanieroku.xhtml
+++ b/npkpir_23/web/manager/sub/zamykanieroku.xhtml
@@ -64,7 +64,7 @@
             </p:column>
         </p:dataTable>
         <p:outputPanel style="margin-top: 10px; padding: 10px;">
-            <p:panelGrid style="margin-top: 10px;width: 650px;" id="wprowadzanieplatnosci">
+            <p:panelGrid  columns="1"  style="margin-top: 10px;width: 650px;" id="wprowadzanieplatnosci">
                 <f:facet name="header">
                     <p:row>
                         <p:column>
