--- a/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe.xhtml
@@ -9,7 +9,7 @@
       
         <h:form id="formokresowe">
            
-            <p:panelGrid id="panelsumokresowe">
+            <p:panelGrid  columns="1"  id="panelsumokresowe">
                 <f:facet name="header">
                     <p:row>
                     <p:column>
