bilans zamkniecia wielaknoc warszawa 01.04.2024

--- a/npkpir_23/web/ksiegowaFK/ksiegowaFKBilanse.xhtml
+++ b/npkpir_23/web/ksiegowaFK/ksiegowaFKBilanse.xhtml
@@ -63,6 +63,7 @@
                     <ui:include src="sub/dialog/dialog_bilans_projekt_analityczne.xhtml"/>
                     <ui:include src="sub/dialog/dialog_bilans_generowanie.xhtml"/>
                     <ui:include src="sub/dialog/dialog_bilans_wprowadzanie_2.xhtml"/>
+                    <ui:include src="sub/dialog/dialog_bilans_wprowadzanie_3.xhtml"/>
                     <ui:include src="sub/dialog/dialog_bilans_usun.xhtml"/>
                     <ui:include src="sub/dialog/dialog_bilans_konta_wnma.xhtml"/>
                     <ui:include src="sub/dialog/dialog_projekt_wyborukladu.xhtml"/>
