--- a/npkpir_23/web/ksiegowaFK/ksiegowaFKDokument.xhtml
+++ b/npkpir_23/web/ksiegowaFK/ksiegowaFKDokument.xhtml
@@ -100,8 +100,9 @@
                     <ui:include src="sub/dialog/dialog_rozrachunkiprzegladanie.xhtml"/>
                     <ui:include src="sub/dialog/dialog_ustawieniabanki.xhtml"/>
                     
-                    
+
                     <ui:include src="sub/dialog/dialog_zmiana_okresu.xhtml"/> 
+                    <ui:include src="sub/dialog/dialog_bilans_wprowadzanie_3.xhtml"/>
 
                 </p:layoutUnit><ui:include src="sub/layout/south.xhtml"/> 
             </p:layout>
