--- a/npkpir_23/web/ksiegowaFK/sub/menu/menubilanse.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/menu/menubilanse.xhtml
@@ -71,6 +71,9 @@
                                         update=":formdialog_bilansBO_wyliczenie"></p:menuitem>
                             <p:menuitem value="przeglądaj konta Bilansu otwarcia" actionListener="#{bilansPodgladView.init()}" onclick="PF('bilansprzeglad').show();" update=":formbilans"></p:menuitem>
                             <p:menuitem value="różnice wierszeBO dokumentBO" onclick="PF('dialog_bilans_roznice').show();" update=":form_dialog_bilans_roznice"></p:menuitem>
+                            <p:menuitem value="wprowadź Bilans otwarcia Nowy" actionListener="#{bilansWprowadzanieNowyView.rozpocznijBO()}" 
+                                        update="formbilanswprowadzanienowy formbilanswprowadzanienowy_wiersz formbilanswprowadzanie3nowy"
+                                        onclick="PF('bilanswprowadzanienowy').show();"></p:menuitem>
                             <p:menuitem value="wprowadź Bilans otwarcia" actionListener="#{bilansWprowadzanieView.rozpocznijBO()}" 
                                         update="formbilanswprowadzanie2 formbilanswprowadzanie2_wiersz formbilanswprowadzanie3"
                                         onclick="PF('bilanswprowadzanie2').show();"></p:menuitem>
