--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_zapisynakoncie.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_zapisynakoncie.xhtml
@@ -34,7 +34,7 @@
     </style>
     <p:dialog id="zapisy" header="Zapisy na pojedynczym koncie firma - #{WpisView.podatnikObiekt.nazwapelnaPDF}" widgetVar="zapisynakoncie" appendTo="@(body)"
               resizable="false" onShow="ustawdialog('zapisy','menudokumenty',1730,780);doczeplistnerydopol();$(document.getElementById('formwpiskonta:wyborkonta_input')).select();"
-              onHide="resetujdialog('zapisy');"  closeOnEscape="true" minimizable="true" dynamic="true"
+              onHide="resetujdialog('zapisy');"  closeOnEscape="true" minimizable="true" dynamic="true" 
               >
         <p:ajax event="open" listener="#{kontoZapisFKView.init()}" update="formwpiskonta form tabelazzapisami tabelazsumami miesiacezapisykonta walutazapisynakoncie"/>
         <p:layout fullPage="false" style="height: 720px;width: 730px;" >  
@@ -191,6 +191,8 @@
                         <p:menuitem icon="fa fa-check-square" value="sprawdzono" actionListener="#{kontoZapisFKView.oznaczjakosprawdzone(1)}" oncomplete="zmienkolor()" global="false"/>
                         <p:menuitem icon="fa fa-ban" value="odsprawdź" actionListener="#{kontoZapisFKView.oznaczjakosprawdzone(0)}"  oncomplete="zmienkolor1()" global="false"/>
                         <p:menuitem icon="fa fa-ban" value="odsprawdź wszystkie" actionListener="#{kontoZapisFKView.oznaczjakosprawdzone(3)}"  global="false" update="form:dataList"/>
+                        <p:separator/>
+                        <p:menuitem icon="fa fa-file-code-o" value="nanieś BZ" actionListener="#{kontoZapisFKView.naniesbz}"   global="false"/>
                         <p:separator/>
                         <p:menuitem icon="fa fa-trash" value="usuń zapisy" actionListener="#{dokfkView.usunzapisy(kontoZapisFKView.wybranekonto, kontoZapisFKView.kontozapisy)}"   global="false" rendered="#{facesContext.externalContext.remoteUser eq '4'}"/>
                     </p:contextMenu>
